# rage-plugin

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile
cmake/: CCDPlanetConfig.cmake.in
include/ccd/: api.h  callable.h  console.h  entity.h  exception.h  player.h  plugin.h  pluginAttachment.h  vector.h  vehicle.h
source/: CMakeLists.txt  api.cpp  api.h  console.cpp  console.h  entity.cpp  entity.h  player.cpp  player.h  plugin.cpp  plugin.h  pluginAttachment.cpp  resource.cpp  resource.h  vector3.cpp  vector3.h
source/ccd/: api.cpp  console.cpp  entity.cpp  player.cpp  plugin.cpp  pluginAttachment.cpp  resource.cpp  vector.cpp
